# FastAPI-social-networking-application

./: Makefile  README.md  Task.md  alembic.ini  pyproject.toml
migrations/: env.py
src/: config.py  database.py  main.py  models.py
src/auth/: auth_config.py  manager.py  schemas.py  utils.py
src/posts/: checks.py  router.py  schemas.py
