[tool.poetry]
name = "fastapi-social-networking-application"
version = "0.1.0"
description = ""
authors = ["Daniil <danokp@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_social_networking_application"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
sqlalchemy-utils = "^0.41.1"
fastapi-users = {version = "^12.0.0", extras = ["sqlalchemy"]}
pydantic = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
